# LilyGo_Tsim_A7670X

./: .gitignore  LICENSE  README.md
01_HelloWorld/sketch_HelloWorld/: sketch_HelloWorld.ino
02_HelloModem/02_HelloModem.ino/: 02_HelloModem.ino.ino
03_Modem_Library/03_modem_library/: 03_modem_library.ino
Clion/07_espidf_test/: CMakeLists.txt  Readme.md  sdkconfig  sdkconfig.old
Clion/07_espidf_test/main/: CMakeLists.txt  main.c
Clion/07_espidf_test/src/: CMakeLists.txt  main.cpp
PlatformIo/04_pio_hello_world/: platformio.ini
PlatformIo/04_pio_hello_world/src/: main.cpp
PlatformIo/05_at_debug/ATDebug/: platformio.ini
PlatformIo/05_at_debug/ATDebug/src/: main.cpp
PlatformIo/06_udp_duplex/06_udp_duplex/: platformio.ini
PlatformIo/06_udp_duplex/06_udp_duplex/src/: main.cpp
ServerSide/: .gitignore
ServerSide/UdpHook/: UdpHook.sln
ServerSide/UdpHook/UdpHook/: Log.cs  Program.cs  TcpServer.cs  UdpServer.cs
docs/: RFID info.txt
